<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="movie"
            type="mostafagad.projects.movies.domain.model.MovieModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.MovieDetails">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/favMovieImg"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:src="@drawable/unfav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/marvelCharImg"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="5dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintTop_toBottomOf="@id/favMovieImg"
            app:loadImage="@{movie.poster_path}"
            tools:layout_editor_absoluteX="5dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movieNameTxt"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".5"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center|start"
            android:hint="@string/movie_character_name"
            android:maxLines="1"
            android:padding="4dp"
            android:text="@{movie.title}"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/marvelCharImg" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movieRateTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:drawableStart="@drawable/ic_baseline_star_rate_24"
            android:drawablePadding="5dp"
            android:gravity="start|center"
            android:hint="@string/rate"
            android:text="@{String.valueOf(movie.vote_average)}"
            android:textAlignment="viewStart"
            android:textColor="@color/yellow_dark"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/movieNameTxt"
            app:layout_constraintBottom_toBottomOf="@id/movieNameTxt"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movieOverviewTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="top|start"
            android:hint="@string/overview"
            android:maxLines="5"
            android:lines="5"
            android:padding="4dp"
            android:text="@{movie.overview}"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="14sp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieNameTxt" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movieOriginalLanguageTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="top|start"
            android:hint="@string/original_lang"
            android:maxLines="1"
            android:padding="4dp"
            android:text="@{@string/original_lang + ':' + movie.original_language }"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="14sp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieOverviewTxt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>