<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <import type="android.view.View"/>
        <variable
            name="movie"
            type="mostafagad.projects.movies.domain.model.MovieModel" />


    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:padding="5dp"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/marvelCharacterLyt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movieRateTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableStart="@drawable/ic_baseline_star_rate_24"
                android:drawablePadding="5dp"
                android:gravity="start|center"
                android:hint="@string/rate"
                android:text="@{String.valueOf(movie.vote_average)}"
                android:textAlignment="viewStart"
                android:textColor="@color/yellow_dark"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/movieFavImg"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                app:applyFav="@{movie.fav}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/marvelCharImg"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_margin="5dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintTop_toBottomOf="@id/movieRateTxt"
                app:loadImage="@{movie.poster_path}"
                tools:layout_editor_absoluteX="5dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movieNameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center|start"
                android:hint="@string/movie_character_name"
                android:maxLines="1"
                android:padding="4dp"
                android:text="@{movie.title}"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/marvelCharImg" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movieReleaseDateTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center|start"
                android:hint="@string/release_date"
                android:maxLines="1"
                android:padding="4dp"
                android:text="@{movie.release_date}"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="13sp"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@id/movieNameTxt" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>